# stock-research-mcp

./: .gitignore  README.md  prd.md  pyproject.toml
src/stock_research/: __init__.py  config.py  server.py
src/stock_research/services/: __init__.py  alpaca.py  alpha_vantage_mcp.py  cache.py  finnhub.py
src/stock_research/tools/: __init__.py  analysts.py  company.py  macro.py  market_data.py  sentiment.py  technicals.py  trading.py
src/stock_research/utils/: calculations.py
tests/: conftest.py  test_services.py  test_tools.py  test_trading.py  test_utils.py
